Bug 728758 - Detect animations removed from top of compositor stack and recomposite; r=dholbert